solve the horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,7 @@
   position: relative;
   padding: 2rem;
 }
-.app{
-  width: 100%;
-}
+
 .navbar {
 
   display: flex;
